# oapth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: tests.yaml
.scripts/: all-tests.sh  common.sh  fuzz.sh  integration-tests-all.sh  integration-tests-mssql.sh  integration-tests-mysql.sh  integration-tests-postgres.sh  integration-tests-sqlite.sh  internal-tests-all.sh  internal-tests-oapth-0.sh  internal-tests-oapth-1.sh  podman-rm.sh  podman-start.sh  podman-stop.sh
.test-utils/: docker-compose.yml
.test-utils/migrations/1__initial/: 2__create_post.sql  4__insert_post.sql
.test-utils/migrations/2__more_stuff/: 1__create_stuff.sql
.test-utils/mssql/: Dockerfile  README.md  configure-db.sh  entrypoint.sh  setup.sql
fuzz/: Cargo.toml  parse_migration.rs  parsers.rs  validate.rs
oapth/: Cargo.toml
oapth-benchmarks/: Cargo.toml  README.md  back_ends.rs  backends.rs
oapth-cli/: Cargo.toml
oapth-cli/src/: cli.rs  error.rs  main.rs
oapth-commons/: Cargo.toml
oapth-commons/src/: database.rs  error.rs  lib.rs  macros.rs  migration_parser.rs  parsers.rs  toml_parser.rs  utils.rs
oapth-commons/src/parsers/: parse_migration.rs
oapth-fuzz/: Cargo.toml  parsers.rs
oapth-macros/: Cargo.toml
oapth-macros/src/: embed_migrations.rs  lib.rs
oapth-test-utils/: docker-compose.yml  migrations.cfg
oapth-test-utils/migrations/: README.md
oapth-test-utils/migrations/1__initial/: 1__create_author.sql  2__create_post.sql  3__insert_authors.sql  4__insert_post.sql
oapth-test-utils/migrations/2__more_stuff/: 1__create_apple.sql
oapth-test-utils/migrations/2__more_stuff/3__ultra_fancy_stuff/: 3__ultra_fancy_stuff.cfg  3__ultra_fancy_stuff.toml
oapth-test-utils/mssql/: README.md  configure-db.sh  entrypoint.sh
oapth/src/: _back_end.rs  back_end.rs  back_end_impls.rs  back_ends.rs  backend.rs  backend_impls.rs  backends.rs  commands.rs  config.rs  database.rs  database_ty.rs  diesel_schema.rs  doc_tests.rs  error.rs  fixed_sql_commands.rs  from_row.rs  from_rows.rs  integration_tests.rs  lib.rs  macros.rs  migration.rs  orm.rs  parse_sql_file.rs  parsers.rs  repeatability.rs  row.rs  sm.rs  tests.rs  utils.rs
oapth/src/back_end/: diesel.rs  mysql_async.rs  rusqlite.rs  sqlx.rs  tiberius.rs  tokio_postgres.rs  unit.rs
oapth/src/back_end/diesel/: schemas.rs
oapth/src/back_end_impls/: diesel.rs  mysql_async.rs  rusqlite.rs  sqlx.rs  tiberius.rs  tokio_postgres.rs  unit.rs
oapth/src/back_end_impls/diesel/: schemas.rs
oapth/src/back_ends/: back_end.rs  back_end_generic.rs
oapth/src/backend/: diesel.rs  mysql_async.rs  rusqlite.rs  sqlx.rs  tiberius.rs  tokio_postgres.rs  unit.rs
oapth/src/backend_impls/: diesel.rs  mysql_async.rs  rusqlite.rs  sqlx.rs  tiberius.rs  tokio_postgres.rs  unit.rs
oapth/src/backend_impls/diesel/: schemas.rs
oapth/src/backends/: backend.rs  backend_generic.rs
oapth/src/commands/: clean.rs  migrate.rs  migrate_from_dir.rs  recreate.rs  reset.rs  rollback.rs  rollback_from_dir.rs  seed.rs  seed_from_dir.rs  validate.rs  validate_from_dir.rs
oapth/src/database/: sqlx.rs  tiberius.rs  unit.rs
oapth/src/fixed_sql_commands/: mssql.rs  mysql.rs  pg.rs  postgres.rs  sqlite.rs
oapth/src/integration_tests/: back_end.rs  backend.rs  db.rs  generic.rs  schema.rs
oapth/src/integration_tests/db/: mssql.rs  mysql.rs  pg.rs  postgres.rs  sqlite.rs
oapth/src/integration_tests/schema/: with_schema.rs  without_schema.rs
oapth/src/migration/: db_migration.rs  generic_migration.rs  migration_common.rs  migration_group.rs  migration_params.rs
oapth/src/migration/db_migration/: db_migration_diesel.rs  db_migration_sqlx.rs
oapth/src/orm/: crud.rs  full_table_association.rs  generic_sql_value.rs  no_table_association.rs  no_table_entity.rs  no_table_field.rs  sql_value.rs  sql_writer.rs  table.rs  table_association_wrapper.rs  table_associations.rs  table_field.rs  table_fields.rs  table_params.rs  tuple_impls.rs  utils.rs
oapth/src/orm/sql_writer/: write_delete.rs  write_insert.rs  write_select.rs  write_update.rs
oapth/src/parsers/: parse_migration.rs
oapth/src/sm/: commands.rs  config.rs  doc_tests.rs  fixed_sql_commands.rs  integration_tests.rs  migration_parser.rs  repeatability.rs  toml_parser.rs  utils.rs
oapth/src/sm/commands/: clear.rs  migrate.rs  rollback.rs  seed.rs  validate.rs
oapth/src/sm/fixed_sql_commands/: mssql.rs  mysql.rs  postgres.rs  sqlite.rs
oapth/src/sm/integration_tests/: backend.rs  generic.rs  schema.rs
oapth/src/sm/integration_tests/db/: mssql.rs  mysql.rs  postgres.rs
oapth/src/sm/integration_tests/schema/: with_schema.rs  without_schema.rs
oapth/src/sm/migration/: db_migration.rs  migration_common.rs  migration_group.rs  user_migration.rs
oapth/src/sm/migration/db_migration/: db_migration_sqlx.rs
oapth/src/tests/orm/: collection.rs  diamond.rs
oapth/tests/: embed-migrations.rs
scripts/: all-tests.sh  benchmark.sh  benchmarks.sh  common.sh  fuzz.sh  integration-tests-all.sh  integration-tests-mariadb.sh  integration-tests-mssql.sh  integration-tests-mysql.sh  integration-tests-pg.sh  integration-tests-postgres.sh  integration-tests-sqlite.sh  internal-tests-all.sh  internal-tests-oapth-0.sh  internal-tests-oapth-1.sh  internal-tests-oapth-cli.sh  internal-tests-oapth-misc.sh  internal-tests.sh  podman-rm.sh  podman-start.sh  podman-stop.sh  publish.sh
