[[bin]]
name = "parsers"
path = "parsers.rs"

[[bin]]
name = "validate"
path = "validate.rs"

[dependencies]
arbitrary = { default-features = false, features = ["derive"], version = "0.4" }
libfuzzer-sys = { default-features = false, version = "0.3" }
oapth = { default-features = false, features = ["std"], path = "../oapth" }
oapth-commons = { default-features = false, features = ["std"], path = "../oapth-commons" }
tokio = { default-features = false, features = ["rt-core"], version = "0.2" }

[package]
edition = "2018"
name = "oapth-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[workspace]
