[dependencies]
argh = { default-features = false, version = "0.1" }
oapth = { default-features = false, features = ["std"], path = "../oapth", version = "0.1" }
tokio = { default-features = false, features = ["macros", "rt-core"], version = "0.2" }
sqlx-core = { default-features = false, optional = true, version = "0.4" }

[features]
default = []
dev-tools = ["oapth/dev-tools"]
mssql = ["oapth/with-sqlx-mssql", "sqlx-core/runtime-tokio-rustls"]
mysql = ["oapth/with-mysql_async"]
pg = ["oapth/with-tokio-postgres"]
sqlite = ["oapth/with-rusqlite"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["command-line-utilities", "database"]
description = "Oapth CLI"
edition = "2018"
keywords = ["cli", "database", "migration", "oapth", "sql"]
license = "Apache-2.0"
name = "oapth-cli"
readme = "README.md"
repository = "https://github.com/c410-f3r/oapth"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true