[dependencies]
argh = { default-features = false, version = "0.1" }
dotenv = { default-features = false, optional = true, version = "0.15" }
env_logger = { default-features = false, optional = true, version = "0.9" }
oapth = { default-features = false, features = ["std"], path = "../oapth", version = "0.1" }
oapth-commons = { default-features = false, path = "../oapth-commons", version = "0.1" }
sqlx-core = { default-features = false, optional = true, version = "0.5" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }

[features]
default = []
dev-tools = ["dotenv", "log", "oapth/dev-tools"]
log = ["env_logger"]
mssql = ["oapth/with-sqlx-mssql", "sqlx-core/runtime-tokio-native-tls"]
mysql = ["oapth/with-mysql_async"]
pg = ["oapth/with-tokio-postgres"]
sqlite = ["oapth/with-rusqlite"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["command-line-utilities", "database"]
description = "Oapth CLI"
edition = "2021"
keywords = ["cli", "database", "migration", "oapth", "sql"]
license = "Apache-2.0"
name = "oapth-cli"
readme = "README.md"
repository = "https://github.com/c410-f3r/oapth"
rust-version = "1.56"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
