[[bin]]
name = "parsers"
path = "parsers.rs"

[dependencies]
libfuzzer-sys = { default-features = false, version = "0.4" }
oapth = { default-features = false, features = ["std"], path = "../oapth" }
oapth-commons = { default-features = false, features = ["std"], path = "../oapth-commons" }

[package]
edition = "2021"
name = "oapth-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true
