[[bin]]
name = "parsers"
path = "parsers.rs"
required-features = ["libfuzzer-sys/link_libfuzzer"]

[dependencies]
libfuzzer-sys = { default-features = false, version = "0.4" }
oapth = { default-features = false, features = ["sm", "std"], path = "../oapth" }

[package]
edition = "2021"
name = "oapth-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true
