[dependencies]
oapth-commons = { default-features = false, features = ["std"], optional = true, path = "../oapth-commons" }
proc-macro2 = { default-features = false, optional = true, version = "1.0" }
quote = { default-features = false, features = ["proc-macro"], optional = true, version = "1.0" }

[features]
default = []
embed-migrations = ["oapth-commons/with-quote", "proc-macro2", "quote"]

[lib]
proc-macro = true

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Oapth macros"
edition = "2021"
keywords = ["database", "migration", "oapth", "sql"]
license = "Apache-2.0"
name = "oapth-macros"
readme = "README.md"
repository = "https://github.com/c410-f3r/oapth"
rust-version = "1.56"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true