[dependencies]
oapth = { default-features = false, features = ["quote", "sm", "std"], path = "../oapth", version = "0.1" }
proc-macro2 = { default-features = false, version = "1.0" }
quote = { default-features = false, features = ["proc-macro"], version = "1.0" }

[features]
default = []

[lib]
proc-macro = true

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Oapth macros"
edition = "2021"
keywords = ["database", "migration", "oapth", "sql"]
license = "Apache-2.0"
name = "oapth-macros"
readme = "README.md"
repository = "https://github.com/c410-f3r/oapth"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
