[dependencies]

# Back ends

diesel = { default-features = false, features = ["chrono"], git = "https://github.com/diesel-rs/diesel", optional = true }

mysql_async = { default-features = false, optional = true, version = "0.27" }

rusqlite = { default-features = false, features = ["chrono", "trace"], optional = true, version = "0.24" }

sqlx-core = { default-features = false, features = ["chrono"], optional = true, version = "0.5" }

tiberius = { default-features = false, optional = true, version = "0.5" }

native-tls = { default-features = false, optional = true, version = "0.2" }
postgres-native-tls = { default-features = false, features = ["runtime"], optional = true, version = "0.5" }
tokio = { default-features = false, optional = true, version = "1.0" }
tokio-postgres = { default-features = false, features = ["runtime", "with-chrono-0_4"], optional = true, version = "0.7" }

futures = { default-features = false, optional = true, version = "0.3" }

# Internals

arrayvec = { default-features = false, version = "0.7" }
chrono = { default-features = false, version = "0.4" }
oapth-commons = { default-features = false, path = "../oapth-commons" } 
oapth-macros = { default-features = false, path = "../oapth-macros" }
siphasher = { default-features = false, version = "0.3" }

[dev-dependencies]
chrono = { default-features = false, features = ["clock"], version = "0.4" }
env_logger = { default-features = false, version = "0.8" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
tokio-util = { default-features = false, features = ["compat"], version = "0.6" }

[features]

# Public features

default = []
dev-tools = []
embed-migrations = ["oapth-macros/embed-migrations"]
std = ["oapth-commons/std"]
with-diesel-mysql = ["diesel/mysql", "std"]
with-diesel-pg = ["diesel/postgres", "std"]
with-diesel-sqlite = ["diesel/sqlite", "std"]
with-mysql_async = ["mysql_async", "std"]
with-rusqlite = ["rusqlite", "std"]
with-sqlx-mssql = ["futures", "sqlx-core/mssql", "std"]
with-sqlx-mysql = ["futures", "sqlx-core/mysql", "std"]
with-sqlx-pg = [ "futures", "sqlx-core/postgres", "std"]
with-sqlx-sqlite = ["futures", "sqlx-core/sqlite", "std"]
with-tiberius = ["futures", "std", "tiberius"]
with-tokio-postgres = ["native-tls", "postgres-native-tls", "std", "tokio", "tokio-postgres"]

# Private features

_integration-tests = ["std"]
_sqlx_hack = ["sqlx-core/runtime-tokio-native-tls"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Flexible version control for databases through SQL migrations"
edition = "2021"
keywords = ["database", "migration", "oapth", "sql"]
license = "Apache-2.0"
name = "oapth"
readme = "README.md"
repository = "https://github.com/c410-f3r/oapth"
rust-version = "1.56"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
