[[bin]]
name = "cli"
required-features = ["sm-cli", "tokio"]

[dependencies]
argh = { default-features = false, optional = true, version = "0.1" }
arrayvec = { default-features = false, version = "0.7" }
chrono = { default-features = false, optional = true, version = "0.4" }
cl-aux = { default-features = false, features = ["alloc"], version = "4.0" }
dotenv = { default-features = false, optional = true, version = "0.15" }
futures = { default-features = false, optional = true, version = "0.3" }
proc-macro2 = { default-features = false, optional = true, version = "1.0" }
quote = { default-features = false, optional = true, version = "1.0" }
rust_decimal = { default-features = false, optional = true, version = "1.0" }
smallvec = { default-features = false, features = ["const_generics", "union"], optional = true, version = "1.0" }
sqlx-core = { default-features = false, optional = true, version = "0.7" }
sqlx-mysql = { default-features = false, optional = true, version = "0.7" }
sqlx-postgres = { default-features = false, optional = true, version = "0.7" }
sqlx-sqlite = { default-features = false, optional = true, version = "0.7" }
tiberius = { default-features = false, optional = true, version = "0.12" }
tokio = { default-features = false, optional = true, version = "1.0" }

[dev-dependencies]
chrono = { default-features = false, features = ["clock"], version = "0.4" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
tokio-util = { default-features = false, features = ["compat"], version = "0.7" }

[features]
default = []
orm = ["dep:smallvec"]
quote = ["dep:proc-macro2", "dep:quote"]
sm = ["chrono", "sqlx-mysql?/chrono", "sqlx-postgres?/chrono", "sqlx-sqlite?/chrono", "tiberius?/chrono"]
sm-cli = ["argh", "sm", "tokio/macros", "tokio/rt-multi-thread"]
sm-dev = ["sm"]
sqlx-mysql = ["dep:futures", "sqlx-core", "dep:sqlx-mysql", "std"]
sqlx-postgres = ["dep:futures", "sqlx-core", "dep:sqlx-postgres", "std"]
sqlx-sqlite = ["dep:futures", "sqlx-core", "dep:sqlx-sqlite", "std"]
std = []
tiberius = ["dep:futures", "futures?/std", "std", "dep:tiberius"]

_integration-tests = ["sqlx-core?/_rt-tokio", "std"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Object–relational mapping"
edition = "2021"
keywords = ["database", "orm", "sql"]
license = "Apache-2.0"
name = "oapth"
repository = "https://github.com/c410-f3r/oapth"
version = "0.1.0"
